--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1,4 +1,72 @@
 .header {
   background-color: $color-grey-dark-1;
   grid-column: full-start / col-end 6;
+  background-image: linear-gradient(rgba($color-secondary, .93), rgba($color-secondary, .93));
+
+  position: relative;
+  padding: 5rem;
+  padding-top: 2.5rem;
+  display: grid;
+  grid-template-rows: 1fr min-content 3.75rem 1fr;
+  grid-template-columns: max-content;
+  justify-content: center;
+  row-gap: 1rem;
+
+
+  &_hero {
+    opacity: .1;
+    z-index: 5;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+  }
+
+  &_logoContainer {
+    justify-self: center;
+  
+  }
+
+  &_logoImg {
+    width: 8rem;
+  }
+
+  &_btn {
+    align-self: start;
+    justify-self: start;
+  }
+
+  &_seenOn___text {
+    font-size: 1rem;
+    color: $color-grey-light-2;
+
+    display: grid;
+    grid-template-columns: 1fr max-content 1fr;
+    align-items: center;
+    column-gap: 1rem;
+
+    &::before, 
+    &::after {
+      content: '';
+      display: block;
+      height: 1px;
+      background-color: currentColor;
+      
+    }
+  }
+  
+  &_seenOn___logos {
+    display: grid;
+    grid-template-columns: repeat(4, minmax(max-content, 1fr));
+    justify-items: center;
+    align-items: center;
+
+    & > * {
+      width: 6rem;
+      filter: brightness(70%);
+    }
+
+
+}
 }
