--- a/src/styles/components/_sidebar.scss
+++ b/src/styles/components/_sidebar.scss
@@ -10,7 +10,7 @@
 .nav_btn {
   border: none;
   border-radius: 0;
-  margin-top: 3rem;
+  margin-top: 2rem;
   background-color: #fff;
   height: 2px;
   width: 2.8125rem;
