--- a/src/styles/components/_story.scss
+++ b/src/styles/components/_story.scss
@@ -15,9 +15,7 @@
 
     grid-row: 1 / -1;
     grid-column: 1 / -1;
-    object-fit: cover;
     height: 100%;
-
 
   }
   &_img1 {
